<resources>
    <string name="app_name">FireLedger</string>
    <!-- Spark -->
    <string name="APP_ID">b46b62dd</string>
    <string name="API_KEY">3adf0eeaba9b2a9be8d6f6443727a57c</string>
    <string name="API_SECRET">N2VhMmM5ZmE1NTQ3MDc1ZjQ4ZTIwZDA2</string>
    <string name="DOMAIN">lite</string>
    <string name="URL">wss://spark-api.xf-yun.com/v1.1/chat</string>

    <!-- Login -->
    <string name="login_title">Login</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="register_now">Register Now</string>
    <!-- Google Login -->
    <string name="default_web_client_id">AIzaSyDPR71a6oLYqMuwb0MdsfHvbtF-f6_ec_4</string>

    <!-- Register -->
    <string name="register_title">Register</string>
    <string name="register_email_hint">Enter Email</string>
    <string name="register_password_hint">Enter Password</string>
    <string name="register_confirm_password_hint">Confirm Password</string>
    <string name="register_button">Register</string>
    <string name="already_have_account">Already have an account? Login now</string>

    <!-- MainPage -->
    <string-array name="transaction_types">
        <item>Income</item>
        <item>Expense</item>
    </string-array>
    <string name="main_title">Ledger</string>
    <string name="main_report">Need an analysis report?</string>

    <!-- AddBilling -->
    <string name="addbilling_selectdate">Select Date</string>
    <string name="addbilling_amount">Enter Amount</string>
    <string name="addbilling_description">Description</string>
    <string name="addbilling_save">Save</string>

    <!-- LLM -->
    <string name="llm_process">Result is being analyzed</string>
    <string name="llm_btn">Back</string>
</resources>
